--- a/DesafioVExpenses/index.html
+++ b/DesafioVExpenses/index.html
@@ -105,8 +105,7 @@
 
             <h2>Place Holder teste agenda prototype</h2>
             <!-- cards com informações dos contatos -->
-            <!-- row-beginning -->
-            <div class="row">
+            <div class="row"><!-- row-beginning -->
                 <div class="col-lg-6 mb-3">
                     <div class="card">
                         <div class="card-body">
@@ -153,10 +152,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- row-end -->
-            <!-- row-beginning -->
-            <div class="row">
+            </div> <!-- row-end -->
+            <div class="row"><!-- row-beginning -->
                 <div class="col-lg-6 mb-3">
                     <div class="card">
                         <div class="card-body">
@@ -203,10 +200,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- row-end -->
-            <!-- row-beginning -->
-            <div class="row">
+            </div><!-- row-end -->
+            <div class="row"> <!-- row-beginning -->
                 <div class="col-lg-6 mb-3">
                     <div class="card">
                         <div class="card-body">
@@ -253,8 +248,55 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- row-end -->
+            </div><!-- row-end -->
+            <div class="row"><!-- row-beginning -->
+                <div class="col-lg-6 mb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- tablea para organizar -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="profileImage">A</div>
+                                    </td>
+                                    <td>
+                                        <h4 class="card-title">Contato 1</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <div class="card-text">555-555</div>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- tablea para organizar -->
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="profileImage">B</div>
+                                    </td>
+                                    <td>
+                                        <h4 class="card-title">Contato 2</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <div class="card-text">555-555</div>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- row-end -->
         </div>
     </div>
 
