--- a/DesafioVExpenses/public/index.html
+++ b/DesafioVExpenses/public/index.html
@@ -78,6 +78,12 @@
                         <i class="fas fa-bars"></i>
                         <span>Sidebar</span>
                     </button>
+
+                    <!-- botão para teste -->
+                    <button type="button" id="loadContacts" class="btn btn-dark">
+                        <i class="fas fa-bars"></i>
+                        <span>Load Contatos</span>
+                    </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
