--- a/DesafioVExpenses/public/index.html
+++ b/DesafioVExpenses/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
+
 <body>
 
     <div class="wrapper">
@@ -108,201 +109,128 @@
                     </div>
                 </div>
             </nav>
-
-            <h2>Place Holder teste agenda prototype</h2>
-            <!-- cards com informações dos contatos -->
-            <div class="row"><!-- row-beginning -->
-                <div class="col-lg-6 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- tablea para organizar -->
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="profileImage">A</div>
-                                    </td>
-                                    <td>
-                                        <h4 class="card-title">Contato 1</h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <div class="card-text">555-555</div>
-                                    </td>
-                                </tr>
-                            </table>
+            <div id="containerCards">
+                <h2>Place Holder teste agenda prototype</h2>
+                <!-- cards com informações dos contatos -->
+                <div class="row">
+                    <!-- row-beginning -->
+                    <div class="col-lg-6 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <!-- tablea para organizar -->
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="profileImage">A</div>
+                                        </td>
+                                        <td>
+                                            <h4 class="card-title">Contato 1</h4>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <div class="card-text">555-555</div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- tablea para organizar -->
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="profileImage">B</div>
-                                    </td>
-                                    <td>
-                                        <h4 class="card-title">Contato 2</h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <div class="card-text">555-555</div>
-                                    </td>
-                                </tr>
-                            </table>
+                    <div class="col-lg-6 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <!-- tablea para organizar -->
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="profileImage">B</div>
+                                        </td>
+                                        <td>
+                                            <h4 class="card-title">Contato 2</h4>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <div class="card-text">555-555</div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div> <!-- row-end -->
-            <div class="row"><!-- row-beginning -->
-                <div class="col-lg-6 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- tablea para organizar -->
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="profileImage">C</div>
-                                    </td>
-                                    <td>
-                                        <h4 class="card-title">Contato 3</h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <div class="card-text">555-555</div>
-                                    </td>
-                                </tr>
-                            </table>
+                    <div class="col-lg-6 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <!-- tablea para organizar -->
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="profileImage">B</div>
+                                        </td>
+                                        <td>
+                                            <h4 class="card-title">Contato 2</h4>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <div class="card-text">555-555</div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- tablea para organizar -->
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="profileImage">D</div>
-                                    </td>
-                                    <td>
-                                        <h4 class="card-title">Contato 4</h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <div class="card-text">555-555</div>
-                                    </td>
-                                </tr>
-                            </table>
+                    <div class="col-lg-6 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <!-- tablea para organizar -->
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="profileImage">B</div>
+                                        </td>
+                                        <td>
+                                            <h4 class="card-title">Contato 2</h4>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <div class="card-text">555-555</div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div><!-- row-end -->
-            <div class="row"> <!-- row-beginning -->
-                <div class="col-lg-6 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- tablea para organizar -->
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="profileImage">C</div>
-                                    </td>
-                                    <td>
-                                        <h4 class="card-title">Contato 3</h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <div class="card-text">555-555</div>
-                                    </td>
-                                </tr>
-                            </table>
+                    <div class="col-lg-6 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <!-- tablea para organizar -->
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="profileImage">B</div>
+                                        </td>
+                                        <td>
+                                            <h4 class="card-title">Contato 2</h4>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <div class="card-text">555-555</div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- tablea para organizar -->
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="profileImage">D</div>
-                                    </td>
-                                    <td>
-                                        <h4 class="card-title">Contato 4</h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <div class="card-text">555-555</div>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- row-end -->
-            <div class="row"><!-- row-beginning -->
-                <div class="col-lg-6 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- tablea para organizar -->
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="profileImage">A</div>
-                                    </td>
-                                    <td>
-                                        <h4 class="card-title">Contato 1</h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <div class="card-text">555-555</div>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- tablea para organizar -->
-                            <table>
-                                <tr>
-                                    <td>
-                                        <div class="profileImage">B</div>
-                                    </td>
-                                    <td>
-                                        <h4 class="card-title">Contato 2</h4>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <div class="card-text">555-555</div>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- row-end -->
+                </div> <!-- row-end -->
+            </div>
         </div>
     </div>
 
