--- a/DesafioVExpenses/public/index.html
+++ b/DesafioVExpenses/public/index.html
@@ -30,7 +30,10 @@
 
             <ul class="list-unstyled components">
                 <p>SIDEBAR</p>
-                <li class="active">
+                <li>
+                    <a href="#" id="novoContato">Novo Contato</a>
+                </li>
+                <li>
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
@@ -45,7 +48,6 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">About</a>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
                         class="dropdown-toggle">Pages</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
@@ -81,7 +83,7 @@
                     </button>
 
                     <!-- botão para teste -->
-                    <button type="button" id="loadContacts" class="btn btn-dark">
+                    <button type="button" id="loadContacts" class="btn btn-dark ml-3">
                         <i class="fas fa-bars"></i>
                         <span>Load Contatos</span>
                     </button>
@@ -110,125 +112,11 @@
                 </div>
             </nav>
             <div id="containerCards">
-                <h2>Place Holder teste agenda prototype</h2>
-                <!-- cards com informações dos contatos -->
-                <div class="row">
+                <div class="row justify-content-lg-center">
+                    <h2>Place Holder teste agenda prototype</h2>
+                </div>
+                <div class="row justify-content-lg-center" id="rowCards">
                     <!-- row-beginning -->
-                    <div class="col-lg-6 mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <!-- tablea para organizar -->
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="profileImage">A</div>
-                                        </td>
-                                        <td>
-                                            <h4 class="card-title">Contato 1</h4>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td>
-                                            <div class="card-text">555-555</div>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <!-- tablea para organizar -->
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="profileImage">B</div>
-                                        </td>
-                                        <td>
-                                            <h4 class="card-title">Contato 2</h4>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td>
-                                            <div class="card-text">555-555</div>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <!-- tablea para organizar -->
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="profileImage">B</div>
-                                        </td>
-                                        <td>
-                                            <h4 class="card-title">Contato 2</h4>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td>
-                                            <div class="card-text">555-555</div>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <!-- tablea para organizar -->
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="profileImage">B</div>
-                                        </td>
-                                        <td>
-                                            <h4 class="card-title">Contato 2</h4>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td>
-                                            <div class="card-text">555-555</div>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <!-- tablea para organizar -->
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <div class="profileImage">B</div>
-                                        </td>
-                                        <td>
-                                            <h4 class="card-title">Contato 2</h4>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td>
-                                            <div class="card-text">555-555</div>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
                 </div> <!-- row-end -->
             </div>
         </div>
@@ -239,7 +127,7 @@
         <img src="Aperture_Science.svg" alt="pikachu" width="100%" height="100%" class="rotate" id="bgd-img">
     </div>
 
-    <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js'></script>
+    <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js'></script>
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js'></script>
