--- a/DesafioVExpenses/public/index.html
+++ b/DesafioVExpenses/public/index.html
@@ -133,7 +133,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js'></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./script2.js"></script>
 
 </body>
 
