--- a/DesafioVExpenses/public/index.html
+++ b/DesafioVExpenses/public/index.html
@@ -113,7 +113,7 @@
             </nav>
             <div id="containerCards">
                 <div class="row justify-content-lg-center">
-                    <h2>Place Holder teste agenda prototype</h2>
+                    <h2 id="tituloH2">Place Holder teste agenda prototype</h2>
                 </div>
                 <div class="row justify-content-lg-center" id="rowCards">
                     <!-- row-beginning -->
@@ -133,7 +133,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js'></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="./script2.js"></script>
+    <script src="./script3.js"></script>
 
 </body>
 
