--- a/DesafioVExpenses/public/index.html
+++ b/DesafioVExpenses/public/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
-
+<style>
+   
+</style>
 <body>
 
     <div class="wrapper">
@@ -119,6 +121,9 @@
                 <div class="row justify-content-lg-center" id="rowCards">
                     <!-- row-beginning -->
                 </div> <!-- row-end -->
+                <!-- <div class="row justify-content-lg-center" id="newContacts">
+                    teste
+                </div> -->
             </div>
         </div>
     </div>
@@ -134,7 +139,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js'></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="./script3.js"></script>
+    <script src="./script4.js"></script>
 
 </body>
 
