--- a/DesafioVExpenses/public/index.html
+++ b/DesafioVExpenses/public/index.html
@@ -37,16 +37,16 @@
                     <a href="#" id="novoContato">Novo Contato</a>
                 </li>
                 <li>
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Categorias</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#">Home 1</a>
+                            <a href="#">Familia</a>
                         </li>
                         <li>
-                            <a href="#">Home 2</a>
+                            <a href="#">Trabalho</a>
                         </li>
                         <li>
-                            <a href="#">Home 3</a>
+                            <a href="#">Amigos</a>
                         </li>
                     </ul>
                 </li>
@@ -66,10 +66,10 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Portfolio</a>
+                    <a href="#">Deletar Contatos</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Impotar</a>
                 </li>
             </ul>
         </nav>
@@ -99,16 +99,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Coisa1</a>
+                                <a class="nav-link filterTab" href="#">Familia</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Coisa2</a>
+                                <a class="nav-link filterTab" href="#">Trabalho</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Coisa3</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Coisa4</a>
+                                <a class="nav-link filterTab" href="#">Amigos</a>
                             </li>
                         </ul>
                     </div>
