--- a/DesafioVExpenses/public/index.html
+++ b/DesafioVExpenses/public/index.html
@@ -40,7 +40,7 @@
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Categorias</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#">Familia</a>
+                            <a href="#">Família</a>
                         </li>
                         <li>
                             <a href="#">Trabalho</a>
@@ -80,13 +80,13 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
                 <div class="container-fluid">
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-dark">
+                    <button type="button" id="sidebarCollapse" class="btn btn-dark  mr-3">
                         <i class="fas fa-bars"></i>
                         <span>Sidebar</span>
                     </button>
 
                     <!-- botão para teste -->
-                    <button type="button" id="loadContacts" class="btn btn-dark ml-3">
+                    <button type="button" id="loadContacts" class="btn btn-dark">
                         <i class="fas fa-bars"></i>
                         <span>Load Contatos</span>
                     </button>
@@ -99,7 +99,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link filterTab" href="#">Familia</a>
+                                <a class="nav-link filterTab" href="#">Família</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link filterTab" href="#">Trabalho</a>
