--- a/desafio/public/index.html
+++ b/desafio/public/index.html
@@ -73,6 +73,12 @@
                 <li>
                     <a href="#">Impotar</a>
                 </li>
+                <li>
+                    <a href="#">Impotar</a>
+                    <form action="/logout?_method=DELETE" method="POST">
+                        <button class="a" type="submit">Log Out</button>
+                    </form>
+                </li>
             </ul>
         </nav>
 
