--- a/desafio/public/index.html
+++ b/desafio/public/index.html
@@ -74,9 +74,8 @@
                     <a href="#">Impotar</a>
                 </li>
                 <li>
-                    <a href="#">Impotar</a>
                     <form action="/logout?_method=DELETE" method="POST">
-                        <button class="a" type="submit">Log Out</button>
+                        <button class="btn btn-dark" type="submit">Log Out</button>
                     </form>
                 </li>
             </ul>
